fixing notebook format
temporarily pdm-added `nbformat` to use `nbformat.validator.normalize()`
and rewrite the ipynb. Now all cells have an `id`.

--- a/aoc22_puk.ipynb
+++ b/aoc22_puk.ipynb
@@ -72,8 +72,7 @@
     "    s2 = chr(ord(s2) - 23)\n",
     "    return shape_score(s2) + outcome_score(s1, s2)\n",
     "\n",
-    "print(sum(round_score(_) for _ in d))\n",
-    "\n"
+    "print(sum(round_score(_) for _ in d))"
    ]
   },
   {
@@ -206,9 +205,7 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "52274aa3-fdce-4bc6-bcf1-14fc709f69b8",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -405,8 +402,7 @@
     "\n",
     "Some of the pairs have noticed that one of their assignments fully contains the other. For example, 2-8 fully contains 3-7, and 6-6 is fully contained by 4-6. In pairs where one assignment fully contains the other, one Elf in the pair would be exclusively cleaning sections their partner will already be cleaning, so these seem like the most in need of reconsideration. In this example, there are 2 such pairs.\n",
     "\n",
-    "In how many assignment pairs does one range fully contain the other?\n",
-    "\n"
+    "In how many assignment pairs does one range fully contain the other?\n"
    ]
   },
   {
@@ -483,8 +479,7 @@
     "\n",
     "So, in this example, the number of overlapping assignment pairs is 4.\n",
     "\n",
-    "In how many assignment pairs do the ranges overlap?\n",
-    "\n"
+    "In how many assignment pairs do the ranges overlap?\n"
    ]
   },
   {
@@ -528,7 +523,47 @@
    "id": "19e8ad0a-d468-48e4-95aa-e5412a7c490a",
    "metadata": {},
    "source": [
-    "# D"
+    "# Day 5\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dab41ba-6084-4228-837a-5a08d55ab082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = read_input(\"xx_input.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a56b15e8",
+   "metadata": {},
+   "source": [
+    "## Day 5 - Part 2\n",
+    "\n",
+    "\n",
+    "# Day 6\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22773859",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = read_input(\"xx_input.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79335f82",
+   "metadata": {},
+   "source": [
+    "## Day 6 - Part 2\n"
    ]
   }
  ],
