--- a/aoc22_puk.qmd
+++ b/aoc22_puk.qmd
@@ -14,10 +14,12 @@ jupyter:
 ---
 
 ```{python}
+from pprint import pprint
+
+
 def read_input(s):
     with open(f"./input/{s}") as f:
-        data = f.readlines()
-        data = [_.strip() for _ in data]
+        data = f.read().splitlines()
         return data
 ```
 
@@ -30,20 +32,27 @@ print(d[:5])
 
 ```{python}
 def shape_score(s: str) -> int:
-    return {"A": 1, "B": 2, "C": 3,}[s]
+    return {
+        "A": 1,
+        "B": 2,
+        "C": 3,
+    }[s]
+
 
 def outcome_score(s1: str, s2: str) -> int:
     if s1 == s2:
-        return 3 # draw
+        return 3  # draw
     if (s1, s2) in (("A", "B"), ("B", "C"), ("C", "A")):
-        return 6 # 2nd player wins
-    return 0 # 1st player wins
+        return 6  # 2nd player wins
+    return 0  # 1st player wins
+
 
 def round_score(s):
     s1 = s[0]
     s2 = s[2]
     s2 = chr(ord(s2) - 23)
     return shape_score(s2) + outcome_score(s1, s2)
+
 
 print(sum(round_score(_) for _ in d))
 ```
@@ -53,16 +62,26 @@ print(sum(round_score(_) for _ in d))
 ```{python}
 def strategy(s1: str, s2: str) -> str:
     if s2 == "X":  # loose
-        return {"B": "A", "C": "B", "A": "C",}[s1]
+        return {
+            "B": "A",
+            "C": "B",
+            "A": "C",
+        }[s1]
     if s2 == "Y":  # draw
         return s1
-    return {"A": "B", "B": "C", "C":"A",}[s1]
+    return {
+        "A": "B",
+        "B": "C",
+        "C": "A",
+    }[s1]
+
 
 def new_round_score(s: str) -> int:
     s1 = s[0]
     s2 = s[2]
     mine = strategy(s1, s2)
     return shape_score(mine) + outcome_score(s1, mine)
+
 
 # test_data = ["A Y", "B X", "C Z",]
 # r = test_data[1]
@@ -123,27 +142,31 @@ ord("Z") - ord("A") + 27
 
 ```{python}
 test_data = [
-"vJrwpWtwJgWrhcsFMMfFFhFp",
-"jqHRNqRjqzjGDLGLrsFMfFZSrLrFZsSL",
-"PmmdzqPrVvPwwTWBwg",
-"wMqvLMZHhHMvwLHjbvcjnnSBnvTQFn",
-"ttgJtRGJQctTZtZT",
-"CrZsJsPPZsGzwwsLwLmpwMDw",
+    "vJrwpWtwJgWrhcsFMMfFFhFp",
+    "jqHRNqRjqzjGDLGLrsFMfFZSrLrFZsSL",
+    "PmmdzqPrVvPwwTWBwg",
+    "wMqvLMZHhHMvwLHjbvcjnnSBnvTQFn",
+    "ttgJtRGJQctTZtZT",
+    "CrZsJsPPZsGzwwsLwLmpwMDw",
 ]
 test_result = ["p", "L", "P", "v", "t", "s"]
 test_score = 157
 
+
 def common_item(s):
-    pivot = int(len(s)/2)
+    pivot = int(len(s) / 2)
     assert pivot == len(s[pivot:])
     return set(s[:pivot]).intersection(s[pivot:]).pop()
-    
+
+
 assert [common_item(r) for r in test_data] == test_result
 
-def priority (c):
+
+def priority(c):
     if "a" <= c <= "z":
         return ord(c) - ord("a") + 1
     return ord(c) - ord("A") + 27
+
 
 assert sum(priority(_) for _ in test_result) == test_score
 "preparations done"
@@ -183,18 +206,24 @@ Priorities for these items must still be found to organize the sticker attachmen
 Find the item type that corresponds to the badges of each three-Elf group. What is the sum of the priorities of those item types?
 
 ```{python}
-test={}
-test[0] = ["vJrwpWtwJgWrhcsFMMfFFhFp",
-"jqHRNqRjqzjGDLGLrsFMfFZSrLrFZsSL", 
-"PmmdzqPrVvPwwTWBwg",]
-test[1] = ["wMqvLMZHhHMvwLHjbvcjnnSBnvTQFn",
-"ttgJtRGJQctTZtZT",
-"CrZsJsPPZsGzwwsLwLmpwMDw",]
+test = {}
+test[0] = [
+    "vJrwpWtwJgWrhcsFMMfFFhFp",
+    "jqHRNqRjqzjGDLGLrsFMfFZSrLrFZsSL",
+    "PmmdzqPrVvPwwTWBwg",
+]
+test[1] = [
+    "wMqvLMZHhHMvwLHjbvcjnnSBnvTQFn",
+    "ttgJtRGJQctTZtZT",
+    "CrZsJsPPZsGzwwsLwLmpwMDw",
+]
 
 test_badges = ["r", "Z"]
 
+
 def find_badge(g) -> str:
     return set(g[0]).intersection(g[1]).intersection(g[2]).pop()
+
 
 assert [find_badge(_) for _ in test.values()] == test_badges
 ```
@@ -203,8 +232,9 @@ assert [find_badge(_) for _ in test.values()] == test_badges
 def chunks(lst, n):
     """Yield successive n-sized chunks from lst."""
     for i in range(0, len(lst), n):
-        yield lst[i:i + n]
-        
+        yield lst[i : i + n]
+
+
 sum(priority(_) for _ in (find_badge(_) for _ in chunks(data, 3)))
 ```
 
@@ -265,14 +295,18 @@ test_data = """2-4,6-8
 5-7,7-9
 2-8,3-7
 6-6,4-6
-2-6,4-8""".split("\n")
+2-6,4-8""".split(
+    "\n"
+)
 
 test_result = 2
+
 
 def includes(a1, a2, b1, b2) -> bool:
     if a1 <= b1 and b2 <= a2:
         return True
     return b1 <= a1 and a2 <= b2
+
 
 def process_row(r, fnc=includes) -> bool:
     # print(r)
@@ -280,7 +314,8 @@ def process_row(r, fnc=includes) -> bool:
     l1, l2 = map(int, lhs.split("-"))
     r1, r2 = map(int, rhs.split("-"))
     return fnc(l1, l2, r1, r2)
-    
+
+
 assert sum(process_row(r) for r in test_data) == test_result
 ```
 
@@ -310,8 +345,10 @@ In how many assignment pairs do the ranges overlap?
 ```{python}
 test_overlap = 4
 
+
 def overlap(a1, a2, b1, b2) -> bool:
-    return not(a2 < b1 or b2 < a1)
+    return not (a2 < b1 or b2 < a1)
+
 
 assert sum(process_row(r, fnc=overlap) for r in test_data) == 4
 ```
@@ -322,13 +359,309 @@ sum(process_row(r, fnc=overlap) for r in data)
 
 # Day 5
 
+The expedition can depart as soon as the final supplies have been unloaded from the ships. Supplies are stored in stacks of marked crates, but because the needed supplies are buried under many other crates, the crates need to be rearranged.
+
+The ship has a giant cargo crane capable of moving crates between stacks. To ensure none of the crates get crushed or fall over, the crane operator will rearrange them in a series of carefully-planned steps. After the crates are rearranged, the desired crates will be at the top of each stack.
+
+The Elves don't want to interrupt the crane operator during this delicate procedure, but they forgot to ask her which crate will end up where, and they want to be ready to unload them as soon as possible so they can embark.
+
+They do, however, have a drawing of the starting stacks of crates and the rearrangement procedure (your puzzle input). For example:
+
+```
+    [D]    
+[N] [C]    
+[Z] [M] [P]
+ 1   2   3 
+```
+
+```
+move 1 from 2 to 1
+move 3 from 1 to 3
+move 2 from 2 to 1
+move 1 from 1 to 2
+```
+
+In this example, there are three stacks of crates. Stack 1 contains two crates: crate Z is on the bottom, and crate N is on top. Stack 2 contains three crates; from bottom to top, they are crates M, C, and D. Finally, stack 3 contains a single crate, P.
+
+Then, the rearrangement procedure is given. In each step of the procedure, a quantity of crates is moved from one stack to a different stack. In the first step of the above rearrangement procedure, one crate is moved from stack 2 to stack 1, resulting in this configuration:
+
+```
+[D]        
+[N] [C]    
+[Z] [M] [P]
+ 1   2   3 
+```
+
+In the second step, three crates are moved from stack 1 to stack 3. Crates are moved one at a time, so the first crate to be moved (D) ends up below the second and third crates:
+
+
+```
+        [Z]
+        [N]
+    [C] [D]
+    [M] [P]
+ 1   2   3
+```
+
+Then, both crates are moved from stack 2 to stack 1. Again, because crates are moved one at a time, crate C ends up below crate M:
+
+```
+        [Z]
+        [N]
+[M]     [D]
+[C]     [P]
+ 1   2   3
+```
+
+Finally, one crate is moved from stack 1 to stack 2:
+
+```
+        [Z]
+        [N]
+        [D]
+[C] [M] [P]
+ 1   2   3
+```
+
+The Elves just need to know which crate will end up on top of each stack; in this example, the top crates are C in stack 1, M in stack 2, and Z in stack 3, so you should combine these together and give the Elves the message CMZ.
+
+After the rearrangement procedure completes, what crate ends up on top of each stack?
 
 ```{python}
-data = read_input("xx_input.txt")
+test_input = """    [D]    
+[N] [C]    
+[Z] [M] [P]
+ 1   2   3 
+
+move 1 from 2 to 1
+move 3 from 1 to 3
+move 2 from 2 to 1
+move 1 from 1 to 2
+""".split(
+    "\n"
+)
+
+# print(test_input)
+
+
+def split_stacks_moves(input):
+    stacks = []
+    for i, row in enumerate(input):
+        # print(i, "X", row, "X")
+        if row == "":
+            break
+        stacks.append(row)
+    return stacks, [_ for _ in input[i:] if _ != ""]
+
+
+stacks_input, moves_input = split_stacks_moves(test_input)
+assert len(stacks_input) == 4
+assert len(moves_input) == 4
+
+from collections import defaultdict
+
+
+def parse_stacks(stacks_input):
+    stacks = defaultdict(list)
+    cols = max(map(int, colrow := stacks_input.pop().split()))
+    # print(f"found {cols} stacks ({colrow})")
+    while stacks_input:
+        row = stacks_input.pop()
+        # print(row)
+        for i in range(maxi := min(cols, int((len(row) - 1) / 4)) + 1):
+            # print(maxi,cols)
+            letter = row[1 + i * 4]
+            if letter != " ":
+                # print(i+1, letter)
+                stacks[i + 1] += letter
+        # pprint(dict(stacks))
+    return stacks
+
+
+parsed_stacks = parse_stacks(stacks_input)
+assert parsed_stacks == {1: [*"ZN"], 2: [*"MCD"], 3: ["P"]}
+
+
+def parse_moves(moves):
+    result = []
+    for row in moves:
+        _, qty, _, fr, _, to = row.split()
+        result.append(Move(int(fr), int(to), int(qty)))
+    return result
+
+
+from dataclasses import dataclass
+
+
+@dataclass
+class Move:
+    fr: int
+    to: int
+    qty: int
+
+
+# pprint(moves_input)
+parsed_moves = parse_moves(moves_input)
+assert parsed_moves == [
+    Move(2, 1, 1),
+    Move(1, 3, 3),
+    Move(2, 1, 2),
+    Move(1, 2, 1),
+]
+
+
+def apply_moves(stacks_in, moves):
+    stacks = stacks_in.copy()
+    for step, m in enumerate(moves):
+        # print("---", m)
+        for _ in range(m.qty):
+            try:
+                stacks[m.to].append(stacks[m.fr].pop())
+            except:
+                pprint(stacks)
+                pprint(m)
+                print(f"Problem in step {step}")
+                raise ValueError("can't work with this data")
+        # pprint(dict(stacks))
+    return stacks
+
+
+pprint(dict(parsed_stacks))
+moved_stacks = apply_moves(parsed_stacks, parsed_moves)
+pprint(dict(moved_stacks))
+assert dict(moved_stacks) == {
+    1: ["C"],
+    2: ["M"],
+    3: [*"PDNZ"],
+}
+
+
+def combined_tops(stacks):
+    return "".join(_[-1] for _ in stacks.values())
+
+
+assert combined_tops(moved_stacks) == "CMZ"
+
+
+def day5(input_data, apply_moves=apply_moves):
+    stacks_input, moves_input = split_stacks_moves(input_data)
+    # print(f"Input slitted. {len(stacks_input)} lines of stack data, {len(moves_input)} lines of move data")
+    # print("====")
+    # pprint(stacks_input)
+    parsed_stacks = parse_stacks(stacks_input)
+    # print("=================")
+    # pprint(dict(parsed_stacks))
+    # print(f"Stack data parsed. There are {max(parsed_stacks.keys())} stacks.")
+    parsed_moves = parse_moves(moves_input)
+    moved_stacks = apply_moves(parsed_stacks, parsed_moves)
+    return combined_tops(moved_stacks)
+
+
+assert day5(test_input) == "CMZ"
+"success!"
+```
+
+```{python}
+data = read_input("05_input.txt")
+print(data[:3])
+day5(data)  # 'FRDSQRRCD'
 ```
 
 ## Day 5 - Part 2
 
+As you watch the crane operator expertly rearrange the crates, you notice the process isn't following your prediction.
+
+Some mud was covering the writing on the side of the crane, and you quickly wipe it away. The crane isn't a CrateMover 9000 - it's a CrateMover 9001.
+
+The CrateMover 9001 is notable for many new and exciting features: air conditioning, leather seats, an extra cup holder, and the ability to pick up and move multiple crates at once.
+
+Again considering the example above, the crates begin in the same configuration:
+```
+    [D]    
+[N] [C]    
+[Z] [M] [P]
+ 1   2   3 
+```
+
+Moving a single crate from stack 2 to stack 1 behaves the same as before:
+
+```
+[D]        
+[N] [C]    
+[Z] [M] [P]
+ 1   2   3 
+```
+
+However, the action of moving three crates from stack 1 to stack 3 means that those three moved crates stay in the same order, resulting in this new configuration:
+
+```
+        [D]
+        [N]
+    [C] [Z]
+    [M] [P]
+ 1   2   3
+```
+
+Next, as both crates are moved from stack 2 to stack 1, they retain their order as well:
+
+```
+        [D]
+        [N]
+[C]     [Z]
+[M]     [P]
+ 1   2   3
+```
+
+Finally, a single crate is still moved from stack 1 to stack 2, but now it's crate C that gets moved:
+
+```
+        [D]
+        [N]
+        [Z]
+[M] [C] [P]
+ 1   2   3
+```
+
+In this example, the CrateMover 9001 has put the crates in a totally different order: MCD.
+
+Before the rearrangement process finishes, update your simulation so that the Elves know where they should stand to be ready to unload the final supplies. After the rearrangement procedure completes, what crate ends up on top of each stack?
+
+```{python}
+stacks = {}
+stacks[7] = ["W", "F", "R", "L", "C", "T", "S", "V"]
+stacks[8] = ["T", "Z", "N"]
+stacks[9] = ["M", "S", "D", "J", "R", "Q", "H", "N"]
+m = Move(fr=9, to=8, qty=6)
+pprint(stacks)
+stacks[m.to] += stacks[m.fr][-m.qty :]
+pprint(stacks)
+stacks[m.fr] = stacks[m.fr][: -m.qty]
+pprint(stacks)
+```
+
+```{python}
+def moves_9001(stacks_in, moves):
+    stacks = stacks_in.copy()
+    for step, m in enumerate(moves):
+        # print("---", m)
+        try:
+            stacks[m.to] += stacks[m.fr][-m.qty :]
+            stacks[m.fr] = stacks[m.fr][: -m.qty]
+        except:
+            pprint(stacks)
+            pprint(m)
+            print(f"Problem in step {step}")
+            raise ValueError("can't work with this data")
+        # pprint(dict(stacks))
+    return stacks
+
+
+assert day5(test_input, apply_moves=moves_9001) == "MCD"
+```
+
+```{python}
+day5(data, apply_moves=moves_9001)
+```
 
 # Day 6
 
@@ -337,3 +670,11 @@ data = read_input("xx_input.txt")
 ```
 
 ## Day 6 - Part 2
+
+# Day 7
+
+```{python}
+data = read_input("07_input.txt")
+```
+
+## Day 7 - Part 2
