--- a/aoc22_puk.qmd
+++ b/aoc22_puk.qmd
@@ -663,15 +663,123 @@ assert day5(test_input, apply_moves=moves_9001) == "MCD"
 day5(data, apply_moves=moves_9001)
 ```
 
-# Day 6
+# Day 6 -- Tuning Trouble --
+
+The preparations are finally complete; you and the Elves leave camp on foot and begin to make your way toward the star fruit grove.
+
+As you move through the dense undergrowth, one of the Elves gives you a handheld device. He says that it has many fancy features, but the most important one to set up right now is the communication system.
+
+However, because he's heard you have significant experience dealing with signal-based systems, he convinced the other Elves that it would be okay to give you their one malfunctioning device - surely you'll have no problem fixing it.
+
+As if inspired by comedic timing, the device emits a few colorful sparks.
+
+To be able to communicate with the Elves, the device needs to lock on to their signal. The signal is a series of seemingly-random characters that the device receives one at a time.
+
+To fix the communication system, you need to add a subroutine to the device that detects a start-of-packet marker in the datastream. In the protocol being used by the Elves, the start of a packet is indicated by a sequence of four characters that are all different.
+
+The device will send your subroutine a datastream buffer (your puzzle input); your subroutine needs to identify the first position where the four most recently received characters were all different. Specifically, it needs to report the number of characters from the beginning of the buffer to the end of the first such four-character marker.
+
+For example, suppose you receive the following datastream buffer:
+
+`mjqjpqmgbljsphdztnvjfqwrcgsmlb`
+
+After the first three characters (mjq) have been received, there haven't been enough characters received yet to find the marker. The first time a marker could occur is after the fourth character is received, making the most recent four characters mjqj. Because j is repeated, this isn't a marker.
+
+The first time a marker appears is after the seventh character arrives. Once it does, the last four characters received are jpqm, which are all different. In this case, your subroutine should report the value 7, because the first start-of-packet marker is complete after 7 characters have been processed.
+
+Here are a few more examples:
+
+```
+    bvwbjplbgvbhsrlpgdmjqwftvncz: first marker after character 5
+    nppdvjthqldpwncqszvftbrmjlhg: first marker after character 6
+    nznrnfrfntjfmvfwmzdfjlvtqnbhcprsg: first marker after character 10
+    zcfzfwzzqfrljwzlrfnpqdbhtmscgvjw: first marker after character 11
+```
+
+
+How many characters need to be processed before the first start-of-packet marker is detected?
 
 ```{python}
-data = read_input("xx_input.txt")
+examples = [
+    ("bvwbjplbgvbhsrlpgdmjqwftvncz", "5"),
+    ("nppdvjthqldpwncqszvftbrmjlhg", "6"),
+    ("nznrnfrfntjfmvfwmzdfjlvtqnbhcprsg", "10"),
+    ("zcfzfwzzqfrljwzlrfnpqdbhtmscgvjw", "11"),
+]
+
+s, c = examples[0]
+
+
+def find_marker(s, n=4):
+    for i in range(n, len(s)):
+        # print(t:=s[i-n:i], len(t), len(set(t)))
+        if len(set(s[i - n : i])) == n:
+            return i
+    raise ValueError(f"no {n} distinct chars in {s}")
+
+
+for s, c in examples:
+    # print(find_marker(s), c, find_marker(s) == c)
+    assert find_marker(s) == int(c)
+
+"success"
+```
+
+```{python}
+data = read_input("06_input.txt")
+# print(data)
+find_marker(data[0])
 ```
 
 ## Day 6 - Part 2
 
+Your device's communication system is correctly detecting packets, but still isn't working. It looks like it also needs to look for messages.
+
+A start-of-message marker is just like a start-of-packet marker, except it consists of 14 distinct characters rather than 4.
+
+Here are the first positions of start-of-message markers for all of the above examples:
+
+```
+    mjqjpqmgbljsphdztnvjfqwrcgsmlb: first marker after character 19
+    bvwbjplbgvbhsrlpgdmjqwftvncz: first marker after character 23
+    nppdvjthqldpwncqszvftbrmjlhg: first marker after character 23
+    nznrnfrfntjfmvfwmzdfjlvtqnbhcprsg: first marker after character 29
+    zcfzfwzzqfrljwzlrfnpqdbhtmscgvjw: first marker after character 26
+```
+
+How many characters need to be processed before the first start-of-message marker is detected?
+
+```{python}
+test_input = [
+    _.strip()
+    for _ in """mjqjpqmgbljsphdztnvjfqwrcgsmlb: first marker after character 19
+    bvwbjplbgvbhsrlpgdmjqwftvncz: first marker after character 23
+    nppdvjthqldpwncqszvftbrmjlhg: first marker after character 23
+    nznrnfrfntjfmvfwmzdfjlvtqnbhcprsg: first marker after character 29
+    zcfzfwzzqfrljwzlrfnpqdbhtmscgvjw: first marker after character 26""".splitlines()
+]
+
+examples = [(_.split(":")[0], int(_.split()[-1])) for _ in test_input]
+
+# print(test_input)
+pprint(examples)
+
+for (s, c) in examples:
+    assert find_marker(s, n=14) == c
+```
+
+```{python}
+#| tags: []
+find_marker(data[0], 14)
+```
+
+
+
+
+
+```{python}
 # Day 7
+```
 
 ```{python}
 data = read_input("07_input.txt")
