--- a/aoc22_puk.ipynb
+++ b/aoc22_puk.ipynb
@@ -1096,7 +1096,7 @@
     "    zcfzfwzzqfrljwzlrfnpqdbhtmscgvjw: first marker after character 26\n",
     "```\n",
     "\n",
-    "How many characters need to be processed before the first start-of-message marker is detected?\n"
+    "How many characters need to be processed before the first start-of-message marker is detected?"
    ]
   },
   {
@@ -1160,51 +1160,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63bc3199-7371-429f-bd5c-429b3956b616",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a533b3a-c038-4f1b-8358-621e8c23bbe1",
+   "cell_type": "markdown",
+   "id": "799b3f1d-99c0-4d81-b5bd-7c62b4cd7c6f",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7007249f-f6b7-4c4c-b7cc-ef840f27969c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e57bcc8-5e86-4689-8b35-b06677cbc250",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "632d8588-64d9-4fce-9022-4ccdc47fe940",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Day 7"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63bc3199-7371-429f-bd5c-429b3956b616",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1221,8 +1190,82 @@
    "id": "4ca90aeb-ebd3-4bf0-a1b7-96232ee59a60",
    "metadata": {},
    "source": [
-    "## Day 7 - Part 2"
+    "## Day 7 - Part 2\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fee837d-75e1-4f92-9515-173135e9197c",
+   "metadata": {},
+   "source": [
+    "# Day 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bd639143-db07-44e0-8f3c-7916996081a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0592f65a-bd63-40e4-9633-8a8156fc230a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = read_input(\"08_input.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cbf58a5-b6eb-41e5-be16-1ad175728bfb",
+   "metadata": {},
+   "source": [
+    "## Day 8 - Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f029233b-dfc4-46a2-a318-86517e1c39a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.11.0 (main, Oct 25 2022, 14:13:24) [Clang 14.0.0 (clang-1400.0.29.202)] /Users/jhereth/quda_repos/github.com/jhereth/aoc22/.venv/bin/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.version, sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16d58808",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1245,6 +1288,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3964eb6dd9b715bf883f48f1c9ef67698f467101d60709a6e25cf2d5e1ef8181"
+   }
   }
  },
  "nbformat": 4,
